# src/models/user.model.ts
@@ -1,0 +1,12 @@
+import { Schema, model } from "mongoose";
+import { IUser } from "../types/documents/user.document";
+
+const IUserSchema = new Schema(
+    {
+        name: { type: String },
+        email: { type: String },
+        password: { type: String },
+    },
+    { timestamps: true }
+)
+export const UserSchema = model<IUser>('IUserSchema', IUserSchema);
