# src/routes/index.ts
@@ -1,5 +1,7 @@
 import express from 'express';
 import { AdminRoutesApi } from './admin.route';
+import { ResturantRoutesApi } from './resturant.route';
+import { UserroutesApi } from './user.router';
 
 export class MainRouter {
     router: express.Router;
@@ -11,6 +13,8 @@ export class MainRouter {
 
     routes() {
         this.router.use('/admin', AdminRoutesApi);
+        this.router.use('/resturant', ResturantRoutesApi);
+        this.router.use('/user', UserroutesApi);
     }
 }
 export const MainApi = new MainRouter().router
