# src/types/documents/resturant.document.ts
@@ -1,0 +1,14 @@
+import { Document } from 'mongoose';
+
+export interface IResturant extends Document {
+    _id: string;
+    name: string;
+    location: ILocation;
+    createdAt?: string;
+    updatedAt?: string;
+}
+
+export interface ILocation {
+    latitude: number;
+    longitude: number;
+}
