# src/types/responses/user.response.ts
@@ -1,0 +1,10 @@
+import { ILocation } from "../documents/resturant.document";
+
+export interface IRegisterUserRes {
+    _id: string;
+    name: string;
+    email: string;
+    password: string;
+    createdAt?: string;
+    updatedAt?: string;
+}
